added more pics and fixed some margins

--- a/index.html
+++ b/index.html
@@ -402,58 +402,362 @@
                                     </div>
                                 </div>
                             </div>
-                            <p>Author: Sophia Rodriguez</p>
+                            <p>Author: William Lee</p>
                         </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/django.jpeg" alt="Backend Frameworks and Libraries - Django course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Backend Frameworks and Libraries</h4>
+                            <h5>Django</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Olivia Martinez</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/flask.webp" alt="Backend Frameworks and Libraries - Flask course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Backend Frameworks and Libraries</h4>
+                            <h5>Flask</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Ethan Thompson</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img src="Assests/images/topics-thumbnails/sql.png" alt="Databases and APIs - SQL course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Databases and APIs</h4>
+                            <h5>SQL</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Madison Davis</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/nosql.png" alt="Databases and APIs - NoSQL course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Databases and APIs</h4>
+                            <h5>NoSQL</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Isabella Wilson</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img  src="Assests/images/topics-thumbnails/restapi.jpeg" alt="Databases and APIs - REST APIs course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Databases and APIs</h4>
+                            <h5>REST APIs</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Jacob Garcia</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/graphql.png" alt="Databases and APIs - GraphQL course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Databases and APIs</h4>
+                            <h5>GraphQL</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Mia Brown</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/oauth.png" alt="Web Development Concepts and T...  - OAuth course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Web Development Concepts and T...</h4>
+                            <h5>OAuth</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Evelyn Nguyen</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/json.png" alt="Web Development Concepts and T...  - JSON course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Web Development Concepts and T...</h4>
+                            <h5>JSON</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Liam Hernandez</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assests/images/topics-thumbnails/ajax.gif" alt="Web Development Concepts and T...  - AJAX course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Web Development Concepts and T...</h4>
+                            <h5>AJAX</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Avery Perez</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img  src="Assests/images/topics-thumbnails/websockets.png" alt="Web Development Concepts and T...  - Websockets course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Web Development Concepts and T...</h4>
+                            <h5>Websockets</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Victoria Kim</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
