--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project1</title>
-    <link rel="stylesheet" href="Assests/CSS/custom.css">
-    <link rel="stylesheet" href="Assests/CSS/responsive.css">
+    <link rel="stylesheet" href="Assets/CSS/custom.css">
+    <link rel="stylesheet" href="Assets/CSS/responsive.css">
 </head>
 <body>
     <header>
@@ -56,7 +56,7 @@
             <div class="web-topics">
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/html.png" alt="Web Development Languages - HTML course">
+                        <img src="Assets/images/topics-thumbnails/html.png" alt="Web Development Languages - HTML course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/css.webp" alt="Web Development Languages - CSS course">
+                        <img src="Assets/images/topics-thumbnails/css.webp" alt="Web Development Languages - CSS course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -126,7 +126,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/javascript.jpg" alt="Web Development Languages - JavaScript course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/javascript.jpg" alt="Web Development Languages - JavaScript course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/jquery.png" alt="Frontend Frameworks and Libraries - jQuery course">
+                        <img src="Assets/images/topics-thumbnails/jquery.png" alt="Frontend Frameworks and Libraries - jQuery course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -196,7 +196,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/angular.png" alt="Frontend Frameworks and Libraries - Angular course">
+                        <img src="Assets/images/topics-thumbnails/angular.png" alt="Frontend Frameworks and Libraries - Angular course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -231,7 +231,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/react.webp" alt="Frontend Frameworks and Libraries - React course">
+                        <img src="Assets/images/topics-thumbnails/react.webp" alt="Frontend Frameworks and Libraries - React course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -266,7 +266,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/vuejs.jpeg" alt="Frontend Frameworks and Libraries - Vue.js course">
+                        <img src="Assets/images/topics-thumbnails/vuejs.jpeg" alt="Frontend Frameworks and Libraries - Vue.js course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -302,7 +302,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/nodejs.webp" alt="Backend Frameworks and Libraries - Node.js course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/nodejs.webp" alt="Backend Frameworks and Libraries - Node.js course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -337,7 +337,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/expressjs.webp" alt="Backend Frameworks and Libraries - Express.js course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/expressjs.webp" alt="Backend Frameworks and Libraries - Express.js course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -372,7 +372,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/ruby.jpeg" alt="Backend Frameworks and Libraries - Ruby on Rails course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/ruby.jpeg" alt="Backend Frameworks and Libraries - Ruby on Rails course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -408,7 +408,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/django.jpeg" alt="Backend Frameworks and Libraries - Django course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/django.jpeg" alt="Backend Frameworks and Libraries - Django course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -443,7 +443,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/flask.webp" alt="Backend Frameworks and Libraries - Flask course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/flask.webp" alt="Backend Frameworks and Libraries - Flask course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -479,7 +479,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="Assests/images/topics-thumbnails/sql.png" alt="Databases and APIs - SQL course">
+                        <img src="Assets/images/topics-thumbnails/sql.png" alt="Databases and APIs - SQL course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -514,7 +514,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/nosql.png" alt="Databases and APIs - NoSQL course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/nosql.png" alt="Databases and APIs - NoSQL course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -549,7 +549,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img  src="Assests/images/topics-thumbnails/restapi.jpeg" alt="Databases and APIs - REST APIs course">
+                        <img  src="Assets/images/topics-thumbnails/restapi.jpeg" alt="Databases and APIs - REST APIs course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -584,7 +584,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/graphql.png" alt="Databases and APIs - GraphQL course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/graphql.png" alt="Databases and APIs - GraphQL course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -619,7 +619,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/oauth.png" alt="Web Development Concepts and T...  - OAuth course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/oauth.png" alt="Web Development Concepts and T...  - OAuth course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -655,7 +655,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/json.png" alt="Web Development Concepts and T...  - JSON course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/json.png" alt="Web Development Concepts and T...  - JSON course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -691,7 +691,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img class="full-width" src="Assests/images/topics-thumbnails/ajax.gif" alt="Web Development Concepts and T...  - AJAX course">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/ajax.gif" alt="Web Development Concepts and T...  - AJAX course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -727,7 +727,7 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img  src="Assests/images/topics-thumbnails/websockets.png" alt="Web Development Concepts and T...  - Websockets course">
+                        <img  src="Assets/images/topics-thumbnails/websockets.png" alt="Web Development Concepts and T...  - Websockets course">
                     </div>
                     <div class="container">
                         <div class="topic-details-div">
@@ -761,40 +761,64 @@
                     </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
-                    <div class="thumbnail-div"><img src="" alt=""></div>
+                    <div class="thumbnail-div">
+                        <img src="" alt="">
+                    </div>
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div"><img src="" alt=""></div>
@@ -824,6 +848,6 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="Assests/JS/main.js"></script>
+    <script src="Assets/JS/main.js"></script>
 </body>
 </html>
