added a new thumbnail picture to the web topics on the website

--- a/index.html
+++ b/index.html
@@ -762,7 +762,37 @@
                 </div>
                 <div class="web-topic">
                     <div class="thumbnail-div">
-                        <img src="" alt="">
+                        <img class="full-width" src="Assets/images/topics-thumbnails/responsive.gif" alt="Web Development Concepts and T...  - Resposive Design course">
+                    </div>
+                    <div class="container">
+                        <div class="topic-details-div">
+                            <h4>Web Development Concepts and T...</h4>
+                            <h5>Resposive Design</h5>
+                            <div class="star-rating-box">
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                    </div>
+                                </div>
+                                <div class="star-border">
+                                    <div class="second-level-star">
+                                        <div class="star-color-fill"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>Author: Ryan Jones</p>
+                        </div>
                     </div>
                 </div>
                 <div class="web-topic">
