--- a/index.html
+++ b/index.html
@@ -573,6 +573,7 @@
                                     </div>
                                     <div class="star-border">
                                         <div class="second-level-star">
+                                            <div class="star-color-fill"></div>
                                         </div>
                                     </div>
                                     <div class="star-border">
@@ -1432,12 +1433,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="web-topic"></div> <!-- this is to prevent topics from getting centered in XXlg screens -->
+                    <div id="last-topic" class="web-topic"></div> <!-- this is to prevent topics from getting centered in XXlg screens -->
                 </div>
            </div>
         </div>
     </main>
-
+    <footer>
+        <div class="Footer-message">
+            <h6>Developed with <span><ion-icon class="footer-heart" name="heart"></ion-icon></span> <span class="copyright">&copy</span> 2023</h6>
+        </div>
+    </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="Assets/JS/main.js"></script>
