added media query for details' page, fixed images background, optimized some JavaScript code

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="container main-custom-container">
                 <h3>"24" Web Topics Found</h3>
                 <div class="web-topics-box-parent">
-                    <div class="web-topics">
+                    <div id="web-topics" class="web-topics">
                         <div class="web-topic-card" tabindex="0">
                             <div class="card-thumbnail">
                                 <img src="Assets/images/topics-thumbnails/html.png" alt="Web Development Languages - HTML course">
@@ -1444,20 +1444,7 @@
         </section>
         <section id="details-page" class="details-page">
             <div class="course-details-box">
-                <div class="details-page-card">
-                    <div class="details-page-card-thumbnail">
-                        <img src="Assets/images/topics-thumbnails/javascript.jpg" alt="html course">
-                    </div>
-                    <div class="container details-page-card-custom-container">
-                        <h4><span>HTML</span> by <a href="#">Sarah Smith</a></h4>
-                        <div class="add-to-favourites-box">
-                            <p>Interested about this topic?</p>
-                            <button>Add to Favourites <ion-icon id="details-page-heart" class="details-page-heart" name="heart-outline"></ion-icon></button>
-                            <h6>Unlimited Credits</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="details-page-container">
+                <div class="course-details-box-container">
                     <div class="course-details">
                         <h4>Web Development Languages</h4>
                         <h5>HTML</h5>
@@ -1486,9 +1473,24 @@
                         </div>
                         <p>HTML (Hypertext Markup Language) is the standard markup language for creating web pages and other information that can be displayed in a web browser. It provides a structure for content and defines how it should be displayed on a web page, including text, images, and multimedia. HTML is essintial for creating static web pages and is a foundational technology for the World Wide Web.</p>
                     </div>
+                    <div id="details-page-card-contianer" class="details-page-card-contianer">
+                        <div id="details-page-card" class="details-page-card">
+                            <div class="details-page-card-thumbnail">
+                                <img src="Assets/images/topics-thumbnails/javascript.jpg" alt="html course">
+                            </div>
+                            <div class="container details-page-card-custom-container">
+                                <h4><span>HTML</span> by <a href="#">Sarah Smith</a></h4>
+                                <div class="add-to-favourites-box">
+                                    <p>Interested about this topic?</p>
+                                    <button>Add to Favourites <ion-icon id="details-page-heart" class="details-page-heart" name="heart-outline"></ion-icon></button>
+                                    <h6>Unlimited Credits</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="details-page-container">
+            <div class="details-page-sub-topics-container">
                 <div class="course-sub-topics">
                     <div class="course-sub-topic">
                     <h2>HTML Sub Topics</h5>
