--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container header-container">
             <div class="page-modes">
                 <div class="page-title">
                     <h1 id="page-title" tabindex="0">Web Topics</h1>
@@ -44,14 +44,14 @@
                         <span><ion-icon class="search-icon" name="search-outline"></ion-icon></span>
                         <input class="search-field" type="search" id="SearchField" placeholder="Search the website...">
                         <div tabindex="0" class="search-sort-option search-options">
-                            <p>Sort by:</p>
-                            <p>Default</p>
-                            <span><ion-icon class="search-down-arrow" name="chevron-down-outline"></ion-icon></span>
+                            <label for="search-sort-select">Sort by:</label>
+                            <select id="search-sort-select" name="sort">
+                                <option value="Default">Default</option>
+                            </select>
                         </div>
                         <div tabindex="0" class="search-filter-option search-options">
-                            <p>Filter by:</p>
-                            <p>Default</p>
-                            <span><ion-icon class="search-down-arrow" name="chevron-down-outline"></ion-icon></span>
+                            <label for="search-filter-select">Filter by:</label>
+                            <select id="search-filter-select" name="filter"><option value="Default">Default</option></select>
                         </div>
                     </div>
                 </div>
@@ -1473,7 +1473,7 @@
                         </div>
                         <p>HTML (Hypertext Markup Language) is the standard markup language for creating web pages and other information that can be displayed in a web browser. It provides a structure for content and defines how it should be displayed on a web page, including text, images, and multimedia. HTML is essintial for creating static web pages and is a foundational technology for the World Wide Web.</p>
                     </div>
-                    <div id="details-page-card-contianer" class="details-page-card-contianer">
+                    <div id="details-page-card-contianer" class="details-page-card-contianer details-page-card-contianer-largescreen">
                         <div id="details-page-card" class="details-page-card">
                             <div class="details-page-card-thumbnail">
                                 <img src="Assets/images/topics-thumbnails/javascript.jpg" alt="html course">
@@ -1518,6 +1518,21 @@
                     <div class="course-sub-topic">
                         <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
                         <p>HTML accessibility and semantic markup</p>
+                    </div>
+                </div>
+            </div>
+            <div id="details-page-card-contianer" class="details-page-card-contianer details-page-card-contianer-smallscreen">
+                <div id="details-page-card" class="details-page-card">
+                    <div class="details-page-card-thumbnail">
+                        <img src="Assets/images/topics-thumbnails/javascript.jpg" alt="html course">
+                    </div>
+                    <div class="container details-page-card-custom-container">
+                        <h4><span>HTML</span> by <a href="#">Sarah Smith</a></h4>
+                        <div class="add-to-favourites-box">
+                            <p>Interested about this topic?</p>
+                            <button>Add to Favourites <ion-icon id="details-page-heart" class="details-page-heart" name="heart-outline"></ion-icon></button>
+                            <h6>Unlimited Credits</h6>
+                        </div>
                     </div>
                 </div>
             </div>
