--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container banner-custom-container">
                 <div class="banner-message">
                     <h2>Welcome to our website!</h2>
-                    <p>We have new design that's fresh, modern, and easy to use.</p>
+                    <p>We have a new design that's fresh, modern, and easy to use.</p>
                 </div>
             </div>
         </div>
@@ -1471,7 +1471,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>HTML (Hypertext Markup Language) is the standard markup language for creating web pages and other information that can be displayed in a web browser. It provides a structure for content and defines how it should be displayed on a web page, including text, images, and multimedia. HTML is essintial for creating static web pages and is a foundational technology for the World Wide Web.</p>
+                        <p>HTML (Hypertext Markup Language) is the standard markup language for creating web pages and other information that can be displayed in a web browser. It provides a structure for content and defines how it should be displayed on a web page, including text, images, and multimedia. HTML is essential for creating static web pages and is a foundational technology for the World Wide Web.</p>
                     </div>
                     <div id="details-page-card-contianer" class="details-page-card-contianer details-page-card-contianer-largescreen">
                         <div id="details-page-card" class="details-page-card">
@@ -1492,33 +1492,15 @@
             </div>
             <div class="details-page-sub-topics-container">
                 <div class="course-sub-topics">
-                    <div class="course-sub-topic">
-                    <h2>HTML Sub Topics</h5>
-                    </div>
-                    <div class="course-sub-topic">
-                        <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
-                        <p>HTML syntax and structure</p>
-                    </div>
-                    <div class="course-sub-topic">
-                        <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
-                        <p>HTML  elemnts and attributes</p>
-                    </div>
-                    <div class="course-sub-topic">
-                        <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
-                        <p>HTML  forms and input elemnts</p>
-                    </div>
-                    <div class="course-sub-topic">
-                        <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
-                        <p>HTML  tables and lists</p>
-                    </div>
-                    <div class="course-sub-topic">
-                        <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
-                        <p>HTML multimedia elemnts (audio, video, images)</p>
-                    </div>
-                    <div class="course-sub-topic">
-                        <span><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon></span>
-                        <p>HTML accessibility and semantic markup</p>
-                    </div>
+                    <ul title="course-sub-topics">
+                        <li class="course-sub-topic"><h2>HTML Sub Topics</h2></li>
+                        <li class="course-sub-topic"><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon> <h3>HTML syntax and structure</h3></li>
+                        <li class="course-sub-topic"><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon> <h3>HTML elements and attributes</h3></li>
+                        <li class="course-sub-topic"><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon> <h3>HTML forms and input elements</h3></li>
+                        <li class="course-sub-topic"><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon> <h3>HTML tables and lists</h3></li>
+                        <li class="course-sub-topic"><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon> <h3>HTML multimedia elements (audio, video, images)</h3></li>
+                        <li class="course-sub-topic"><ion-icon class="checkmark" name="checkmark-circle-outline"></ion-icon> <h3>HTML accessibility and semantic markup</h3></li>
+                    </ul>
                 </div>
             </div>
             <div id="details-page-card-contianer" class="details-page-card-contianer details-page-card-contianer-smallscreen">
