added some comments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project1</title>
+    <link rel="stylesheet" href="Vendor/bootstrap/css/bootstrap.min.css">
     <link id="theme-link-details-page" rel="stylesheet" href="Assets/CSS/details-page.css">
     <link id="theme-link-main-page" rel="stylesheet" href="Assets/CSS/custom.css">
     <link rel="stylesheet" href="Assets/CSS/responsive.css">
@@ -1590,8 +1591,12 @@
             </div>
         </div>
     </section>
+    <!-- icons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- Bootstrap Js -->
+    <script src="Vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- custom Js -->
     <script src="Assets/JS/main.js"></script>
 </body>
 </html>
