further improvemnets on details page

--- a/Assets/pages/details.html
+++ b/Assets/pages/details.html
@@ -14,7 +14,7 @@
         <div class="container header-container">
             <div class="page-modes">
                 <div class="page-title">
-                    <h1 id="page-title" tabindex="0">Web Topics</h1>
+                    <a href="../../index.html" id="page-title" tabindex="0">Web Topics</a>
                 </div>
                 <div class="page-modes-buttons">
                     <button type="button" id="dark-mode-button" class="modes-buttons"><ion-icon id="moon" class="moon mode-icon" name="moon-outline"></ion-icon> Dark Mode</button>
@@ -177,6 +177,6 @@
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <!-- custom Js -->
-    <script src="../JS/main.js"></script>
+    <!-- <script src="../JS/main.js"></script> -->
 </body>
 </html>
