first-project-with-modules

--- a/Assets/pages/details.html
+++ b/Assets/pages/details.html
@@ -109,7 +109,7 @@
                 <div class="favourites-items-container">
                     <div class="favourites-item">
                         <div class="favourite-card-thumbnail">
-                            <img src="Assets/images/topics-thumbnails/react.webp" alt="react course">
+                            <img src="../images/topics-thumbnails/react.webp" alt="react course">
                         </div>
                         <div class="favourite-card-details-container">
                             <h5>React</h5>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="favourites-item">
                         <div class="favourite-card-thumbnail">
-                            <img src="Assets/images/topics-thumbnails/cloud.jpeg" alt="react course">
+                            <img src="../images/topics-thumbnails/cloud.jpeg" alt="react course">
                         </div>
                         <div class="favourite-card-details-container">
                             <h5>Cloud Computing</h5>
@@ -176,7 +176,13 @@
         <!-- icons -->
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <!-- custom Js -->
-    <!-- <script src="../JS/main.js"></script> -->
+    <!-- custom Js -->
+    <script type="module" src="../JS/state.js"></script>
+    <script type="module" src="../JS/header.js"></script>
+    <script type="module" src="../JS/darkmode.js"></script>
+    <script type="module" src="../JS/Favourites.js"></script>
+    <script type="module" src="../JS/details-page.js"></script>
+    <script type="module" src="../JS/history.js"></script>
+    <!-- <script type="module" src="../JS/API.js"></script> -->
 </body>
 </html>
